--- a/src/components/Meals/MealItem/MealItem.module.css
+++ b/src/components/Meals/MealItem/MealItem.module.css
@@ -18,3 +18,9 @@
     color: #ad5502;
     font-size: 14px;
   }
+  .li{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 50px;
+  }
